@@ -1,3 +1,7 @@
+2010-06-10  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_scroll_window.c (ol_scroll_window_paint): CHANGE: Refactor scroll window, get rid of active_lyrics array
+
 2010-06-08  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_config_property.h (config_str): ADD: Add config options for display mode
